--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
             <a class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4" href="#">Dashboard</a>
             <div class="bottom-border pb-3">
               <img src="/images/admin.jpeg" width="50" class="rounded-circle" alt="">
-              <a class="text-white mr-3" href="#">Jane Doe</a>
+              <a class="text-white ml-3" href="#">Jane Doe</a>
             </div>
+
             <ul class="navbar-nav flex-column mt-4">
               <li class="nav-item">
                 <a href="#" class="nav-link text-white p-3 mb-2 current">
@@ -84,8 +85,31 @@
 
 
           <!--top-nav-->
-          <div class="col-lg-9">
-
+          <div class="col-xl-9 col-lg-9 col-md-8 ml-auto bg-dark fixed-top py-2 top-navbar">
+            <div class="row align-items-center">
+              <div class="col-md-4">
+                <h4 class="text-light text-uppercase mb-0">Dashboard</h4>
+              </div>
+              <div class="col-md-5">
+                <form>
+                  <div class="input-group">
+                    <input type="text" class="form-control search-input" placeholder="Search...">
+                    <button type="button" class="btn btn-white search-button"><i
+                        class="fas fa-search text-danger"></i></button>
+                  </div>
+                </form>
+              </div>
+              <div class="col-md-3">
+                <ul class="navbar-nav">
+                  <li class="nav-item icon-parent"><a href="#" class="nav-link icon-bullet"><i
+                        class="fas fa-comments text-muted fa-lg"></i></a></li>
+                  <li class="nav-item icon-parent"><a href="#" class="nav-link icon-bullet"><i
+                        class="fas fa-bell text-muted fa-lg"></i></a></li>
+                  <li class="nav-item ml-md-auto"><a href="#" class="nav-link" data-toggle="modal"
+                      data-target="#sign-out"><i class="fas fa-sign-out-alt text-danger fa-lg"></i></a></li>
+                </ul>
+              </div>
+            </div>
           </div>
           <!--end of top-nav-->
 
